--- a/public/index.html
+++ b/public/index.html
@@ -12,10 +12,6 @@
     <body>
         <div id = "app"></div>
         <script src = "/bundle.js"></script>  
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.0.0/react.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/react/16.0.0/react-dom.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap/16.0.0/react-bootstrap.min.js"></script>
-
         <!--[if lt IE 9]>
         <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
         <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv-printshiv.min.js"></script>
@@ -23,4 +19,10 @@
         <script src="//cdnjs.cloudflare.com/ajax/libs/es5-shim/3.4.0/es5-sham.js"></script>
         <![endif]-->
     </body>
+<!-- 
+    <form onSubmit={this.handleAddContact}>
+            <input type="text" name="firstname" />
+            <button>Add Contact</button>
+    </form>
+     -->
 </html>
