--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,7 @@
         <meta name="description" content="Contact Management">
         <meta name="author" content="Samuel Xing">
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+        <link rel="stylesheet" type="text/css" href="/styles.css">
         <link rel='icon' type="image/png" href="images/favicon.png" />
         <title>Contacts</title>
     </head>
