--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
         <meta name="description" content="Contact Management">
         <meta name="author" content="Samuel Xing">
         <link rel='icon' type="image/png" href="images/favicon.png" />
-        <link rel="stylesheet" type="text/css" href="/styles.css" />
+        <link rel="stylesheet" type="text/css" href="/dist/styles.css" />
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
         <title>Contacts</title>
     </head>
     <body>
         <div id = "app"></div>
-        <script src = "/bundle.js"></script>  
+        <script src = "/dist/bundle.js"></script>  
         <script async defer src="https://buttons.github.io/buttons.js"></script>    
         <!--[if lt IE 9]>
         <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.2/html5shiv.min.js"></script>
